core/core-common/src/models/snapshots/proton_core_common__models__contact__test__frodo.snap
---
source: core/core-common/src/models/contact.rs
expression: get_vcard(frodo)
---
Snapshot {
    vcard: "BEGIN:VCARD\r\nVERSION:4.0\r\nFN;PREF=1:Frodo Beutlin\r\nITEM1.EMAIL;PREF=1:frodo@pm.me\r\nLANG:Common\r\nLANG:co-HO\r\nN:Beutlin;Frodo;;;\r\nADR;PREF=1:;Bag End;;Hobbiton;The Shire;;Middle earth\r\nTZ:SMT\r\nPHOTO;PREF=1:https://static.wikia.nocookie.net/lotr/images/3/32/Frodo_%28FotR%29.png/revision/latest?cb=20221006065757\r\nLOGO;PREF=1:https://hipfonts.com/wp-content/uploads/2021/01/The-Lord-of-the-Rings-Logo.jpg\r\nLOGO;PREF=69:data:bad\r\nEND:VCARD\r\n",
    card: ContactDetailCard {
        extended_name: Some(
            ExtendedName {
                last: Some(
                    "Beutlin",
                ),
                first: Some(
                    "Frodo",
                ),
                additional: Some(
                    "",
                ),
                prefix: Some(
                    "",
                ),
                suffix: Some(
                    "",
                ),
            },
        ),
        address: [
            ContactDetailAddress {
                street: "",
                city: "Hobbiton",
                region: "The Shire",
                postal_code: "",
                country: "Middle earth",
                addr_type: [],
            },
        ],
        phones: [],
        birthday: None,
        notes: [],
        anniversary: None,
        urls: [],
        gender: None,
        photos: [
            "https://static.wikia.nocookie.net/lotr/images/3/32/Frodo_%28FotR%29.png/revision/latest?cb=20221006065757",
        ],
        logos: [
            "https://hipfonts.com/wp-content/uploads/2021/01/The-Lord-of-the-Rings-Logo.jpg",
            "data:bad",
        ],
        titles: [],
        roles: [],
        languages: [
            "Common",
            "co-HO",
        ],
        timezones: [
            "SMT",
        ],
        members: [],
        organizations: [],
    },
}
