core/core-common/src/models/snapshots/proton_core_common__models__contact__test__full.snap
---
source: core/core-common/src/models/contact.rs
expression: get_vcard(full)
---
Snapshot {
    vcard: "BEGIN:VCARD\r\nVERSION:4.0\r\nN:Last name;First name;;;\r\nTEL;PREF=1:652522142\r\nTEL;TYPE=other;PREF=2:blah\r\nADR;PREF=1:;;street;city;region;postal;country\r\nADR;PREF=2:;;aa;mep;;;\r\nADR;TYPE=work;PREF=3:;;;;AAAAAAAAAAAAA;;\r\nADR;TYPE=work;PREF=4:;; ;;;;\r\nADR;TYPE=other;PREF=5:;;;; ;;\r\nBDAY:20250527\r\nNOTE:I am a note\r\nNOTE:I\\nAm\\nAnother\\nNote\r\nGENDER:Male\r\nTZ:I use \u{f345} btw\r\nTZ:UTC + 1\r\nORG:Proton\r\nLOGO:data:image/jpeg;base64\\somelogo\r\nTITLE:🦀 Engineer\r\nTITLE:🧜\u{200d}♀\u{fe0f}🧜\u{200d}♀\u{fe0f}\r\nANNIVERSARY:20250429\r\nLANG:esperanto\r\nURL:not a url\r\nURL:mail.proton.me\r\nMEMBER:big\r\nPHOTO;PREF=1:https://my_site.me/cool_photo_link.png\r\nPHOTO;PREF=1:data:image/svg+xml;base64\\,some_photo\r\nEND:VCARD\r\n",
    card: ContactDetailCard {
        extended_name: Some(
            ExtendedName {
                last: Some(
                    "Last name",
                ),
                first: Some(
                    "First name",
                ),
                additional: Some(
                    "",
                ),
                prefix: Some(
                    "",
                ),
                suffix: Some(
                    "",
                ),
            },
        ),
        address: [
            ContactDetailAddress {
                street: "street",
                city: "city",
                region: "region",
                postal_code: "postal",
                country: "country",
                addr_type: [],
            },
            ContactDetailAddress {
                street: "aa",
                city: "mep",
                region: "",
                postal_code: "",
                country: "",
                addr_type: [],
            },
            ContactDetailAddress {
                street: "",
                city: "",
                region: "AAAAAAAAAAAAA",
                postal_code: "",
                country: "",
                addr_type: [
                    Work,
                ],
            },
            ContactDetailAddress {
                street: " ",
                city: "",
                region: "",
                postal_code: "",
                country: "",
                addr_type: [
                    Work,
                ],
            },
            ContactDetailAddress {
                street: "",
                city: "",
                region: " ",
                postal_code: "",
                country: "",
                addr_type: [
                    String(
                        "other",
                    ),
                ],
            },
        ],
        phones: [
            Telephone {
                number: "652522142",
                tel_types: [],
            },
            Telephone {
                number: "blah",
                tel_types: [
                    String(
                        "other",
                    ),
                ],
            },
        ],
        birthday: Some(
            DateAndOrTime(
                DaoT(DateTimeValue { year: Some(2025), month: Some(5), day: Some(27), hour: None, minute: None, second: None, zone: None }),
            ),
        ),
        notes: [
            "I\nAm\nAnother\nNote",
            "I am a note",
        ],
        anniversary: Some(
            DateAndOrTime(
                DaoT(DateTimeValue { year: Some(2025), month: Some(4), day: Some(29), hour: None, minute: None, second: None, zone: None }),
            ),
        ),
        urls: [
            VCardUrl {
                url: "mail.proton.me",
                url_type: [],
            },
            VCardUrl {
                url: "not a url",
                url_type: [],
            },
        ],
        gender: Some(
            String(
                "Male",
            ),
        ),
        photos: [
            "data:image/svg+xml;base64\\,some_photo",
            "https://my_site.me/cool_photo_link.png",
        ],
        logos: [
            "data:image/jpeg;base64\\somelogo",
        ],
        titles: [
            "🦀 Engineer",
            "🧜\u{200d}♀\u{fe0f}🧜\u{200d}♀\u{fe0f}",
        ],
        roles: [],
        languages: [
            "esperanto",
        ],
        timezones: [
            "I use \u{f345} btw",
            "UTC + 1",
        ],
        members: [
            "big",
        ],
        organizations: [
            "Proton",
        ],
    },
}
