core/core-common/src/models/snapshots/proton_core_common__models__contact__test__vcard_v3.snap
---
source: core/core-common/src/models/contact.rs
expression: get_vcard(v3)
---
Snapshot {
    vcard: "BEGIN:VCARD\nVERSION:3.0\nPRODID:-//Apple Inc.//macOS 11.0.1//EN\nN:Doe Winners;John Timothy;;Sir;\nFN:Sir John Timothy Doe Winners\nNICKNAME:JJ\nX-MAIDENNAME:Riesling\nX-PHONETIC-FIRST-NAME:Johny\nORG:DoughCompany;\nTITLE:Consultant\nEMAIL;type=INTERNET;type=pref:John@doe.com\nEMAIL;type=INTERNET;type=HOME:home@home.com\nEMAIL;type=INTERNET;type=WORK:work@work.com\nEMAIL;type=INTERNET;type=HOME:home@home.com\nEMAIL;type=INTERNET;type=WORK:work@work.com\nTEL;type=pref:123456789\nTEL;type=CELL;type=VOICE:334346745\nTEL;type=IPHONE;type=CELL;type=VOICE:23234234234\nTEL;type=HOME;type=VOICE:234234\nTEL;type=WORK;type=VOICE:2342\nTEL;type=MAIN:25563\nTEL;type=CELL;type=VOICE:334346745\nTEL;type=IPHONE;type=CELL;type=VOICE:23234234234\nTEL;type=HOME;type=VOICE:234234\nTEL;type=WORK;type=VOICE:2342\nTEL;type=MAIN:25563\nADR;type=HOME;type=pref:;;First st;Berlin;;44356;Germany\nADR;type=WORK:;;Route de la Galaise;Geneva;;1111;Switzerland\nADR;type=HOME:;;First st;Berlin;;44356;Germany\nADR;type=WORK:;;Route de la Galaise;Geneva;;1111;Switzerland\nNOTE:Frog frog frog\nitem1.URL;type=pref:frog.com\nitem1.X-ABLabel:_$!<HomePage>!$_\nURL;type=HOME:test.com\nitem2.URL:frog.com\nitem2.X-ABLabel:_$!<HomePage>!$_\nURL;type=HOME:test.com\nBDAY:1970-05-05\nX-JABBER;type=WORK;type=pref:john98\nX-JABBER;type=WORK:john98\nIMPP;X-SERVICE-TYPE=Facebook;type=HOME;type=pref:xmpp:johnyyyy\nIMPP;X-SERVICE-TYPE=Jabber;type=WORK:xmpp:john98\nIMPP;X-SERVICE-TYPE=Facebook;type=HOME:xmpp:johnyyyy\nIMPP;X-SERVICE-TYPE=Jabber;type=WORK:xmpp:john98\nEND:VCARD\n",
    card: ContactDetailCard {
        extended_name: Some(
            ExtendedName {
                last: Some(
                    "Doe Winners",
                ),
                first: Some(
                    "John Timothy",
                ),
                additional: Some(
                    "",
                ),
                prefix: Some(
                    "Sir",
                ),
                suffix: Some(
                    "",
                ),
            },
        ),
        address: [
            ContactDetailAddress {
                street: "First st",
                city: "Berlin",
                region: "",
                postal_code: "44356",
                country: "Germany",
                addr_type: [
                    Home,
                ],
            },
            ContactDetailAddress {
                street: "First st",
                city: "Berlin",
                region: "",
                postal_code: "44356",
                country: "Germany",
                addr_type: [
                    String(
                        "pref",
                    ),
                ],
            },
            ContactDetailAddress {
                street: "Route de la Galaise",
                city: "Geneva",
                region: "",
                postal_code: "1111",
                country: "Switzerland",
                addr_type: [
                    Work,
                ],
            },
            ContactDetailAddress {
                street: "Route de la Galaise",
                city: "Geneva",
                region: "",
                postal_code: "1111",
                country: "Switzerland",
                addr_type: [
                    Work,
                ],
            },
        ],
        phones: [
            Telephone {
                number: "123456789",
                tel_types: [
                    String(
                        "pref",
                    ),
                ],
            },
            Telephone {
                number: "23234234234",
                tel_types: [
                    Voice,
                ],
            },
            Telephone {
                number: "23234234234",
                tel_types: [
                    Voice,
                ],
            },
            Telephone {
                number: "2342",
                tel_types: [
                    Voice,
                ],
            },
            Telephone {
                number: "2342",
                tel_types: [
                    Voice,
                ],
            },
            Telephone {
                number: "234234",
                tel_types: [
                    Voice,
                ],
            },
            Telephone {
                number: "234234",
                tel_types: [
                    Voice,
                ],
            },
            Telephone {
                number: "25563",
                tel_types: [
                    String(
                        "MAIN",
                    ),
                ],
            },
            Telephone {
                number: "25563",
                tel_types: [
                    String(
                        "MAIN",
                    ),
                ],
            },
            Telephone {
                number: "334346745",
                tel_types: [
                    Voice,
                ],
            },
            Telephone {
                number: "334346745",
                tel_types: [
                    Voice,
                ],
            },
        ],
        birthday: Some(
            Text(
                "1970-05-05",
            ),
        ),
        notes: [
            "Frog frog frog",
        ],
        anniversary: None,
        urls: [
            VCardUrl {
                url: "frog.com",
                url_type: [],
            },
            VCardUrl {
                url: "frog.com",
                url_type: [
                    String(
                        "pref",
                    ),
                ],
            },
            VCardUrl {
                url: "test.com",
                url_type: [
                    Home,
                ],
            },
            VCardUrl {
                url: "test.com",
                url_type: [
                    Home,
                ],
            },
        ],
        gender: None,
        photos: [],
        logos: [],
        titles: [
            "Consultant",
        ],
        roles: [],
        languages: [],
        timezones: [],
        members: [],
        organizations: [
            "DoughCompany, ",
        ],
    },
}
